cmake_minimum_required(VERSION 2.6)
project(OpenGLES_Samples)
include_directories(${OpenGLES_Samples_SOURCE_DIR}/GLUS/src/)

add_subdirectory(GLUS)
add_subdirectory(Example01_ES2)
add_subdirectory(Example02_ES2)
add_subdirectory(Example06_ES2)
add_subdirectory(Example01_ES)
add_subdirectory(Example02_ES)
add_subdirectory(Example03_ES)
add_subdirectory(Example04_ES)
add_subdirectory(Example05_ES)
add_subdirectory(Example06_ES)
add_subdirectory(Example07_ES)
add_subdirectory(Example08_ES)
add_subdirectory(Example11_ES)
add_subdirectory(Example12_ES)
add_subdirectory(Example15_ES)
add_subdirectory(Example16_ES)
add_subdirectory(Example19_ES)
add_subdirectory(Example20_ES)